--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -1,3 +1,7 @@
+@font-face {
+  font-family: PitagonSerif;
+  src: url(PitagonSerif-Light-BF641cfdc5ea4a2.ttf);
+}
 
 .container, html, body {
     height: 100%;
@@ -19,7 +23,7 @@
     width: 200px;
     padding: 5px;
     font-size: 10px;
-    font-family: Helvetica;
+    font-family: PitagonSerif;
     text-align: left;
     overflow-y: scroll;
     -ms-overflow-style: none;  /* IE and Edge */
