--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -24,7 +24,7 @@
 
   .column {
     flex: 0 0 auto;
-    width: 200px;
+    width: 20%;
     padding: 5px;
     font-size: 10px;
     font-family: PitagonSerif;
