--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -24,7 +24,7 @@
 
   .column {
     flex: 0 0 auto;
-    width: 17%;
+    width: 217px;
     padding: 5px;
     font-size: 12px;
     font-family: PitagonSerif;
