--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -6,6 +6,10 @@
   font-family: PitagonSerif-Italic;
   src: url(PitagonSerif-LightItalic-BF641cfdc716c71.ttf);
 }
+@font-face {
+  font-family: PitagonSerif-Black;
+  src: url(PitagonSerif-Black-BF641cfdc5e201d.ttf);
+}
 
 .container, html, body {
     height: 100%;
@@ -24,7 +28,7 @@
 
   .column {
     flex: 0 0 auto;
-    width: 217px;
+    width: 17%;
     padding: 5px;
     font-size: 12px;
     font-family: PitagonSerif;
@@ -36,6 +40,10 @@
 
   .column i{
     font-family: PitagonSerif-Italic;
+  }
+
+  .column b{
+    font-family: PitagonSerif-Black;
   }
 
   .column a{
@@ -91,7 +99,7 @@ content: "\2192"; /* Unicode for left arrow */
 
   .column {
   flex: 0 0 100%;
-  width: 25%;
+  width: 40%;
   scroll-snap-align: start;
   white-space: nowrap;
   overflow-x: scroll;
@@ -101,7 +109,7 @@ content: "\2192"; /* Unicode for left arrow */
   .column1 {
   position: sticky;
   flex: 0 0 100%;
-  width: 25%;
+  width: 40%;
   scroll-snap-align: start;
   white-space: nowrap;
   overflow-x: scroll;
