--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -89,6 +89,13 @@ content: "\2190"; /* Unicode for left arrow */
 .arrow-button-r::before {
 content: "\2192"; /* Unicode for left arrow */
 }
+
+.anchor{
+  display: block;
+  height: 115px; /*same height as header*/
+  margin-top: -115px; /*same height as header*/
+  visibility: hidden;
+}
   /* Media query for mobile devices */
   @media (max-width: 768px) {
   .container {
