--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -91,8 +91,10 @@ content: "\2192"; /* Unicode for left arrow */
 }
 
 .anchor{
-  position: absolute;
-  transform: translateX(-50vw);
+  display: block;
+  width: 115px; /*same height as header*/
+  margin-left: -115px; /*same height as header*/
+  visibility: hidden;
 }
   /* Media query for mobile devices */
   @media (max-width: 768px) {
