--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -92,8 +92,8 @@ content: "\2192"; /* Unicode for left arrow */
 
 .anchor{
   display: block;
-  width: 50vw; 
-  margin-left: -50vw; 
+  width: 100%; 
+  margin-left: -250%; 
   visibility: hidden;
 }
   /* Media query for mobile devices */
