--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -94,7 +94,7 @@ content: "\2192"; /* Unicode for left arrow */
   display: block;
   position: absolute;
   width: 100%; 
-  margin-left: -400%; 
+  margin-right: -400%; 
   visibility: hidden;
 }
   /* Media query for mobile devices */
