--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -51,6 +51,10 @@
     text-decoration: none;
   }
 
+  .column a:hover {
+    text-decoration: underline;
+  }
+
   .column::-webkit-scrollbar {
     display: none;  /* Chrome, Safari, and Opera */
   }
