--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -28,7 +28,7 @@
 
   .column {
     flex: 0 0 auto;
-    width: 17%;
+    width: 22%;
     padding: 5px;
     font-size: 12px;
     font-family: PitagonSerif;
@@ -48,11 +48,10 @@
 
   .column a{
     color: grey;
-    text-decoration: none;
   }
 
   .column a:hover {
-    text-decoration: underline;
+    color: #191970;
   }
 
   .column::-webkit-scrollbar {
@@ -80,7 +79,8 @@
 
   .arrow-button-l, .arrow-button-r {
 width: 5%;
-background-color: transparent;
+height: 5%;
+background-color: #191970;
 border: none;
 padding: 0;
 font-size: 16px;
