--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -88,11 +88,11 @@ font-size: 16px;
 }
 
 .arrow-button-l::before {
-content: "\2190"; /* Unicode for left arrow */
+content: "\02C2"; /* Unicode for left arrow */
 }
 
 .arrow-button-r::before {
-content: "\2192"; /* Unicode for left arrow */
+content: "\02C3"; /* Unicode for left arrow */
 }
 
 .anchor{
