--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -78,8 +78,8 @@
   }
 
   .arrow-button-l, .arrow-button-r {
-width: 5%;
-height: 5%;
+width: 10px;
+height: 10px;
 color: white;
 background-color: #191970;
 border: none;
