--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -31,6 +31,7 @@
     width: 17%;
     padding: 5px;
     font-size: 14px;
+    line-height: 0.5;
     font-family: PitagonSerif;
     text-align: left;
     overflow-y: scroll;
