--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -31,7 +31,7 @@
     width: 17%;
     padding: 5px;
     font-size: 14px;
-    line-height: 1.5;
+    line-height: 1.75;
     font-family: PitagonSerif;
     text-align: left;
     overflow-y: scroll;
@@ -54,7 +54,8 @@
   }
 
   .column a{
-    color: grey;
+    color: black;
+    text-decoration:none"
   }
 
   .column a:hover {
