--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -31,7 +31,7 @@
     width: 17%;
     padding: 5px;
     font-size: 14px;
-    line-height: 1.75;
+    /* line-height: 1.75; */
     font-family: PitagonSerif;
     text-align: left;
     overflow-y: scroll;
