--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -55,7 +55,8 @@
 
   .column a{
     color: black;
-    text-decoration:none"
+    text-decoration:none;
+    text-indent: 10px;
   }
 
   .column a:hover {
