--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -56,7 +56,7 @@
   .column a{
     color: black;
     text-decoration:none;
-    text-indent: 30%;
+    text-indent: 30% !important;
   }
 
   .column a:hover {
