--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -56,7 +56,8 @@
   .column a{
     color: black;
     text-decoration:none;
-    text-indent: 30% !important;
+    text-indent: 10% !important;
+    padding-left: 10%;
   }
 
   .column a:hover {
