--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -56,8 +56,8 @@
   .column a{
     color: black;
     text-decoration:none;
-    /* text-indent: 10% !important; */
-    padding-left: 10%;
+    left: 20px;
+    position: relative;
   }
 
   .column a:hover {
@@ -94,7 +94,6 @@ height: 30px;
 color: white;
 background-color: #191970;
 border: none;
-padding: 0;
 font-size: 16px;
 }
 
