--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -89,15 +89,22 @@
 
 .button-container {
   position: fixed;
-  top: 0; /* Adjust top position as needed */
-  left: 0; /* Adjust left position as needed */
-  width: 100%; /* Full width */
+  top: 0;
+  left: 0;
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
 
 #slideBackTop {
-  margin-bottom: 10px; /* Adjust spacing between buttons */
+  margin-bottom: 10px;
+}
+
+#slideBackBottom {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
 .arrow-button-l, .arrow-button-r {
@@ -108,6 +115,7 @@
   border: none;
   font-size: 16px;
 }
+
 
 .arrow-button-l::before {
 content: "\02C2"; /* Unicode for left arrow */
