--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -116,10 +116,10 @@
   font-size: 16px;
 }
 
-
+/*
 .arrow-button-l::before {
-content: "\02C2"; /* Unicode for left arrow */
-}
+content: "\02C2";  Unicode for left arrow 
+} */
 
 .arrow-button-r::before {
 content: "\02C3"; /* Unicode for left arrow */
