--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -96,11 +96,11 @@
   flex-direction: column;
 }
 
-#slideBackTop {
+#slideBackTop, #slideForwardTop{
   margin-bottom: 10px;
 }
 
-#slideBackBottom {
+#slideBackBottom, #slideForwardBottom {
   position: fixed;
   bottom: 0;
   left: 0;
