--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -87,10 +87,19 @@
     text-align: justify;
   }
 
-.button-container {
+.button-container-l {
   position: fixed;
   top: 0;
   left: 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.button-container-r {
+  position: fixed;
+  top: 0;
+  right: 0;
   width: 100%;
   display: flex;
   flex-direction: column;
