--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -151,6 +151,13 @@ content: "\02C3"; /* Unicode for left arrow */
 }
   /* Media query for mobile devices */
   @media (max-width: 768px) {
+
+  body {
+  transform: scale(0.8); /* Adjust the scale value as needed */
+  transform-origin: top left; /* Maintain the top left corner as the scaling origin */
+  /* width: 125%;  Compensate for the scaling to prevent horizontal scrolling */
+  }
+    
   .container {
   display: flex;
   overflow-x: scroll;
@@ -181,12 +188,4 @@ content: "\02C3"; /* Unicode for left arrow */
     display: none;
     }
 }
-  
-        @media (max-width: 768px) {
-            /* Adjust the scale for smaller screens */
-            body {
-                transform: scale(0.8); /* Adjust the scale value as needed */
-                transform-origin: top left; /* Maintain the top left corner as the scaling origin */
-                width: 125%; /* Compensate for the scaling to prevent horizontal scrolling */
-            }
-        }
+
