--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -153,8 +153,8 @@ content: "\02C3"; /* Unicode for left arrow */
   @media (max-width: 768px) {
 
   body {
- /* transform: scale(0.8);  Adjust the scale value as needed */
-  transform-origin: top left; /* Maintain the top left corner as the scaling origin */
+ transform: scale(0.8);  /* Adjust the scale value as needed */
+  /* transform-origin: top left; Maintain the top left corner as the scaling origin */
   /* width: 125%;  Compensate for the scaling to prevent horizontal scrolling */
   }
     
