--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -167,7 +167,7 @@ content: "\02C3"; /* Unicode for left arrow */
 
   .column {
   flex: 0 0 100%;
-  width: 50% !important;
+  width: 10% !important;  /* antes 50% */
   scroll-snap-align: start;
   white-space: nowrap;
   overflow-x: scroll;
@@ -177,7 +177,7 @@ content: "\02C3"; /* Unicode for left arrow */
   .column1 {
   position: sticky;
   flex: 0 0 100%;
-  width: 25% !important;
+  width: 5% !important; /* antes 15% */
   scroll-snap-align: start;
   white-space: nowrap;
   overflow-x: scroll;
