--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -160,14 +160,14 @@ content: "\02C3"; /* Unicode for left arrow */
     
   .container {
   display: flex;
-  overflow-x: scroll;
+  /*overflow-x: scroll;*/
   -webkit-overflow-scrolling: touch;
   scroll-snap-type: x mandatory;
   }
 
   .column {
   flex: 0 0 100%;
-  width: 50px% !important;  /* antes 50% */
+  width: 50px !important;  /* antes 50% */
   scroll-snap-align: start;
   white-space: nowrap;
   overflow-x: scroll;
@@ -177,7 +177,7 @@ content: "\02C3"; /* Unicode for left arrow */
   .column1 {
   position: sticky;
   flex: 0 0 100%;
-  width: 15px% !important; /* antes 15% */
+  width: 15px !important; /* antes 15% */
   scroll-snap-align: start;
   white-space: nowrap;
   overflow-x: scroll;
