--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -170,7 +170,7 @@ content: "\02C3"; /* Unicode for left arrow */
   width: 50px !important;  /* antes 50% */
   scroll-snap-align: start;
   white-space: nowrap;
-  overflow-x: scroll;
+  /*overflow-x: scroll; */
   -webkit-overflow-scrolling: touch;
   }
 
@@ -180,7 +180,7 @@ content: "\02C3"; /* Unicode for left arrow */
   width: 15px !important; /* antes 15% */
   scroll-snap-align: start;
   white-space: nowrap;
-  overflow-x: scroll;
+   /*overflow-x: scroll;*/
   -webkit-overflow-scrolling: touch;
   }
 
