--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -176,11 +176,16 @@ content: "\02C3"; /* Unicode for left arrow */
 
   .column {
   flex: 0 0 100%;
-  width: 50px !important;  /* antes 50% */
+  /* width: 50px !important;   antes 50% */
   scroll-snap-align: start;
   white-space: nowrap;
   /*overflow-x: scroll; */
   -webkit-overflow-scrolling: touch;
+
+        width: 100%; /* Set column width to 100% to make them stack vertically */
+        float: none; /* Remove any floating behavior */
+        margin-left: 0; /* Reset left margin */
+        margin-right: 0; /* Reset right margin */
   }
 
   .column1 {
@@ -196,5 +201,8 @@ content: "\02C3"; /* Unicode for left arrow */
   .arrow-button-l, .arrow-button-r {
     display: none;
     }
-}
+
+  #gapB, #gap2B {
+  display: none;
+  }
 
