--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -168,7 +168,7 @@ content: "\02C3"; /* Unicode for left arrow */
   }
     
   .container {
-  display: flex !important;
+  display: flex;
   position: absolute !important; 
   /*overflow-x: scroll;*/
   -webkit-overflow-scrolling: touch;
