--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -42,14 +42,19 @@ html {
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
   }
-  .column2 {
-    flex: 0 0 auto;
-    width: 5%;
-    padding: 5px;
-    overflow-y: scroll;
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-  }
+
+    .column:hover::after {
+        content: ''; /* Add content to the pseudo-element */
+        position: absolute; /* Position the arrow absolutely */
+        bottom: -10px; /* Adjust the distance from the bottom of the column */
+        left: 50%; /* Center the arrow horizontally */
+        transform: translateX(-50%); /* Center the arrow horizontally */
+        width: 0; 
+        height: 0; 
+        border-left: 10px solid transparent; /* Size and shape of the arrow */
+        border-right: 10px solid transparent; /* Size and shape of the arrow */
+        border-top: 10px solid #000; /* Size, shape, and color of the arrow */
+    }
 
   #gapB {
     width: 2.5% !important;
