--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -72,6 +72,9 @@ html {
         border-top: 0px solid #000; /* Size, shape, and color of the arrow */
   }
 
+  #ensanche {
+  width: 27%;
+  }
   .column i{
   } 
 
