--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -72,9 +72,10 @@ html {
         border-top: 0px solid #000; /* Size, shape, and color of the arrow */
   }
 
-  /*#ensanche {
-  width: 27%;
-  }*/
+  #ensanche {
+  width: 25.5%;
+  }
+
   .column i{
   } 
 
