--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -35,7 +35,7 @@ html {
     width: 17%;
     padding: 5px;
     font-size: 15px; /* antes 14px */
-    line-height: 1.50; /* antes nada */
+    line-height: 1.0; /* antes 1.5*/
     font-family: PitagonSerif;
     text-align: left;
     overflow-y: scroll;
@@ -73,7 +73,7 @@ html {
   }
 
   #ensanche {
-  width: 25.5%;
+  width: 20%;
   }
 
   .column i{
