--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -32,7 +32,7 @@ html {
 
   .column {
     flex: 0 0 auto;
-    width: 17%;
+    width: 15%; /* antes 17% */
     padding: 5px;
     font-size: 15px; /* antes 14px */
     line-height: 1.25; /* antes 1.5*/
@@ -81,6 +81,10 @@ html {
 
   .column h3{
     font-family: PitagonSerif !important;
+  }
+
+h3{
+    font-family: PitagonSerif-Black !important;
   }
 
   .column a{
