--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -32,7 +32,7 @@ html {
 
   .column {
     flex: 0 0 auto;
-    width: 15%; /* antes 17% */
+    width: 14%; /* antes 17% */
     padding: 5px;
     font-size: 15px; /* antes 14px */
     line-height: 1.25; /* antes 1.5*/
@@ -73,7 +73,7 @@ html {
   }
 
   #ensanche {
-  width: 20%;
+  width: 28%;
   }
 
   .column i{
@@ -83,8 +83,8 @@ html {
     font-family: PitagonSerif !important;
   }
 
-h3{
-    font-family: PitagonSerif-Black !important;
+  h3{
+    font-family: Roboto;
   }
 
   .column a{
