--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -63,7 +63,7 @@ html {
   }
 
   #gap2B {
-    width: 15% !important; /* Antes 5% */
+    width: 5% !important; /* Antes 5% */
   }
 
   #gapB:hover::after, #gap2B:hover::after {
@@ -126,7 +126,7 @@ html {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  /* width: 100%; */
   display: flex;
   flex-direction: column;
 }
