--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -39,7 +39,7 @@ html {
     font-family: PitagonSerif;
     text-align: left;
     overflow-y: scroll;
-    overflow-x: none;
+    overflow-x: hidden;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
     position: relative; /* Position relative for positioning the arrow */
