--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -32,7 +32,7 @@ html {
 
   .column {
     flex: 0 0 auto;
-    width: 14%; /* antes 17% */
+    width: 12%; /* antes 17% */
     padding: 5px;
     font-size: 15px; /* antes 14px */
     line-height: 1.25; /* antes 1.5*/
@@ -46,39 +46,31 @@ html {
 
   }
 
-    .column:hover::after {
-        content: ''; /* Add content to the pseudo-element */
-        position: sticky; /* Position the arrow absolutely */
-        bottom: 20px; /* Adjust the distance from the bottom of the column */
-        left: 50%; /* Center the arrow horizontally */
-        transform: translateX(-50%); /* Center the arrow horizontally */
-        width: 0; 
-        height: 0; 
-        border-left: 10px solid transparent; /* Size and shape of the arrow */
-        border-right: 10px solid transparent; /* Size and shape of the arrow */
-        border-top: 10px solid #000; /* Size, shape, and color of the arrow */
-    }
-
-  #gapB {
-    width: 2.5% !important;
+  #ensanche {
+  width: 24%;
   }
+
+    .column:hover::after {
+      content: "\f078"; /* Unicode for the fa-chevron-down icon */
+      font-family: 'Font Awesome 5 Free';
+      position: sticky;
+      bottom: 10px; /* Adjust the distance from the bottom of the column */
+      left: 50%; /* Center the arrow horizontally */
+      transform: translateX(-50%); /* Center the arrow horizontally */
+      font-size: 16px; /* Adjust the size of the icon */
+    }
 
   #gap2B {
     width: 5% !important; /* Antes 5% */
   }
 
+  #gapB {
+    width: 3% !important; /* Antes 2.5% */
+  }
+
   #gapB:hover::after, #gap2B:hover::after {
-        border-left: 0px solid transparent; /* Size and shape of the arrow */
-        border-right: 0px solid transparent; /* Size and shape of the arrow */
-        border-top: 0px solid #000; /* Size, shape, and color of the arrow */
+  font-size: 0px; /* Adjust the size of the icon */
   }
-
-  #ensanche {
-  width: 28%;
-  }
-
-  .column i{
-  } 
 
   .column h3{
     font-family: PitagonSerif !important;
@@ -195,7 +187,7 @@ content: "\02C3"; /* Unicode for left arrow */
   .container {
   display: flex;
   /*overflow-x: scroll;*/
-  -webkit-overflow-scrolling: touch;
+  /*-webkit-overflow-scrolling: touch;*/
   scroll-snap-type: x mandatory;
   }
 
@@ -205,7 +197,7 @@ content: "\02C3"; /* Unicode for left arrow */
   scroll-snap-align: start;
   white-space: nowrap;
   /*overflow-x: scroll; */
-  -webkit-overflow-scrolling: touch;
+  /*-webkit-overflow-scrolling: touch; */
 
         width: 100% !important; /* Set column width to 100% to make them stack vertically */
         float: none; /* Remove any floating behavior */
@@ -223,7 +215,7 @@ content: "\02C3"; /* Unicode for left arrow */
   scroll-snap-align: start;
   white-space: nowrap;
    /*overflow-x: scroll;*/
-  -webkit-overflow-scrolling: touch;
+  /*-webkit-overflow-scrolling: touch;*/
   }
 
   .arrow-button-l, .arrow-button-r {
