--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -52,8 +52,8 @@ html {
 
     .column:hover::after {
       content: "\f078"; /* Unicode for the fa-chevron-down icon */
-      font-family: 'Font Awesome 5 Free';
-      position: sticky;
+      font-family: 'Font Awesome 6 Free';
+      position: absolute;
       bottom: 10px; /* Adjust the distance from the bottom of the column */
       left: 50%; /* Center the arrow horizontally */
       transform: translateX(-50%); /* Center the arrow horizontally */
