--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -32,7 +32,7 @@ html {
 
   .column {
     flex: 0 0 auto;
-    width: 12%; /* antes 17% */
+    width: 14%; /* antes 17% */
     padding: 5px;
     font-size: 15px; /* antes 14px */
     line-height: 1.25; /* antes 1.5*/
@@ -47,7 +47,7 @@ html {
   }
 
   #ensanche {
-  width: 13%;
+  width: 14%;
   }
 
   .column:hover::after {
@@ -194,7 +194,7 @@ content: "\02C3"; /* Unicode for left arrow */
   display: flex;
   /*overflow-x: scroll;*/
   /*-webkit-overflow-scrolling: touch;*/
-  scroll-snap-type: x mandatory;
+  /*scroll-snap-type: x mandatory;*/
   }
 
   .column {
@@ -205,7 +205,7 @@ content: "\02C3"; /* Unicode for left arrow */
   /*overflow-x: scroll; */
   /*-webkit-overflow-scrolling: touch; */
 
-        width: 100% !important; /* Set column width to 100% to make them stack vertically */
+       /* width: 100% !important;  Set column width to 100% to make them stack vertically */
         float: none; /* Remove any floating behavior */
         margin-left: 0; /* Reset left margin */
         margin-right: 0; /* Reset right margin */
