--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -54,7 +54,7 @@ html {
   .column:hover::after {
   content: ''; 
   position: sticky;
-  bottom: 10px; /* Adjust the distance from the bottom of the column */
+  bottom: 5px; /* Adjust the distance from the bottom of the column */
   left: 50%; /* Center the arrow horizontally */
   transform: translateX(-50%) rotate(45deg); /* Center and rotate the arrow */
   width: 0; 
@@ -217,8 +217,8 @@ html {
   }
 
   .column {
-  flex: 0 0 100%;
-  width: 25% !important;   /* antes nada */
+  flex: 0 0 25%; /* antes nada */
+  /* width: 25% !important;    antes nada */
   scroll-snap-align: start;
   white-space: nowrap;
   /*overflow-x: scroll; */
