--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -217,7 +217,8 @@ html {
   }
 
   .column {
-  flex: 0 0 25%;
+  flex: 0 0 auto;
+  width: 25%; 
   scroll-snap-align: start;
   white-space: nowrap !important; /* Remove wrapping for wider screens */
   overflow-wrap: break-word !important; /* Wrap long words for narrower screens */
