--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -138,8 +138,52 @@ html {
   flex-direction: column;
 }
 
-#slideBackTop, #slideForwardTop{
+ /* #slideBackTop, #slideForwardTop {
   margin-bottom: 10px;
+}*/
+
+#slideBackTop {
+  content: ''; 
+  bottom: 10px; /* Adjust the distance from the bottom of the column */
+  left: 50%; /* Center the arrow horizontally */
+  transform: translateX(-50%) rotate(135deg); /* Center and rotate the arrow */
+  width: 0; 
+  height: 0; 
+  border: solid #191970;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+#slideForwardTop {
+  content: ''; 
+  bottom: 10px; /* Adjust the distance from the bottom of the column */
+  left: 50%; /* Center the arrow horizontally */
+  transform: translateX(-50%) rotate(315deg); /* Center and rotate the arrow */
+  width: 0; 
+  height: 0; 
+  border: solid #191970;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 3px;
+}
+
+#slideBackTop::before {
+  content: ''; 
+  transform: translateY(-90%) translateX(-10%);
+  border: solid #191970;
+  border-width: 0 3px 0px 0;
+  display: inline-block;
+  padding: 4.5px;
+}
+
+#slideForwardTop::before {
+  content: ''; 
+  transform: translateY(-30%) translateX(-30%);
+  border: solid #191970;
+  border-width: 0 0px 3px 0;
+  display: inline-block;
+  padding: 4.5px;
 }
 
 #slideBackBottom {
