--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -51,6 +51,10 @@ html {
     text-indent: 10%;
  }
 
+ .column b {
+    text-indent: 0%;
+ }
+
   #indice {
     margin-top: 1%; /* antes nada */
   }
