--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -82,7 +82,7 @@ html {
   }
 
   #gapB {
-    width: 1.5% !important; /* Antes 2.5% */
+    width: 20px !important; /* Antes 1.5% */
   }
 
   #gapB:hover::after, #gap2B:hover::after {
