--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -31,7 +31,7 @@ html {
   }
 
   .column {
-    margin-top: 10.6%; /* antes nada */
+    margin-top: 9.6%; /* antes nada */
     flex: 0 0 auto;
     width: 14%; /* antes 12% */
     padding: 5px;
@@ -82,7 +82,7 @@ html {
   }
 
   #gapB {
-    width: 20px !important; /* Antes 1.5% */
+    width: 0% !important; /* Antes 1.5% */
   }
 
   #gapB:hover::after, #gap2B:hover::after {
