--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -19,7 +19,7 @@ html {
     height: 100%;
     display: flex;
     overflow-x: scroll;
-    gap: 10px;
+    /*gap: 10px;*/
     padding-left: 0px;
     margin: 0px;
     -ms-overflow-style: none;  /* IE and Edge */
@@ -64,8 +64,12 @@ html {
   }
 
   hr {
-  width: 110%
+  width: 200%
+  margin-top: -10px;
+  height: 0.5px;
+  background-color: black; 
   }
+
   .column:hover::after {
   content: ''; 
   position: sticky;
