--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -31,7 +31,7 @@ html {
   }
 
   .column {
-    margin-top: 8.4%; /* antes nada */
+    margin-top: 0%; /* antes 8.4% */
     flex: 0 0 auto;
     width: 16%; /* antes 14% */
     padding: 5px;
