--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -266,7 +266,7 @@ html {
   @media (max-width: 768px) {
 
   body {
-  padding: 40px;
+  padding: 50px;
   }
     
   .container {
@@ -296,4 +296,13 @@ html {
   #gapB, #gap2B {
   display: none;
   }
+
+.arrow-button-l, .arrow-button-r {
+  width: 50px;
+  height: 50px;
+  color: #191970;
+  background-color: transparent;
+  border: none;
+  font-size: 16px;
+}}
 
