--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -297,12 +297,20 @@ html {
   display: none;
   }
 
-.arrow-button-l, .arrow-button-r {
-  width: 50px;
-  height: 50px;
-  color: #191970;
-  background-color: transparent;
-  border: none;
-  font-size: 16px;
-}}
+#slideBackTop {
+  padding: 4px;
+}
+
+#slideForwardTop {
+  padding: 4px;
+}
+
+#slideBackBottom::before {
+  padding: 4px;
+}
+
+#slideForwardBottom::before {
+  padding: 4px;
+}
+}
 
