--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -152,6 +152,7 @@ html {
   right: 0;
   display: flex;
   flex-direction: column;
+  z-index: 99;
 }
 
  /* #slideBackTop, #slideForwardTop {
@@ -208,8 +209,8 @@ html {
   position: fixed;
   bottom: 0;
   left: 0;
-  width: 40px;
-  /*z-index: 99;*/
+  width: 30px;
+  z-index: 99;
 }
 
 #slideForwardBottom {
