--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -307,6 +307,14 @@ html {
   padding: 10px;
 }
 
+#slideBackTop::before {
+  padding: 10px;
+}
+
+#slideForwardTop::before {
+  padding: 10px;
+}
+
 #slideBackBottom::before {
   padding: 10px;
 }
